# routes/api.php
@@ -10,6 +10,8 @@ use App\Http\Controllers\ServiceController;
 use App\Http\Controllers\ServiciosController;
 use App\Http\Controllers\EncargadoController;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\RolesController;
+use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -32,7 +34,40 @@ Route::middleware('auth:sanctum')->group(function () {
 
 
 
+    // Rutas de Clientes
+    Route::prefix('clientes')->group(function () {
+        Route::get('/', [ClientesController::class, 'index']);
+        Route::post('/store', [ClientesController::class, 'store']);
+        Route::get('/{cliente}/show', [ClientesController::class, 'show']);
+        Route::put('/{cliente}/update', [ClientesController::class, 'update']);
+        Route::delete('/{cliente}', [ClientesController::class, 'destroy']);
+    });
+
+   // Rutas de asignarRole
+Route::prefix('asignar-rol')->group(function () {
+    Route::get('/', [UserController::class, 'index']);
+    Route::post('/store', [UserController::class, 'asignarRol']);
+    Route::get('/{User}/show', [UserController::class, 'show']);
+    Route::put('/{User}/update', [UserController::class, 'update']);
+    Route::delete('/{User}', [UserController::class, 'destroy']);
 });
+
+// Rutas de roles
+Route::prefix('roles')->group(function () {
+    Route::get('/', [RolesController::class, 'index']);
+    Route::post('/store', [RolesController::class, 'store']);
+    Route::get('/{role}/show', [RolesController::class, 'show']);
+    Route::put('/{role}/update', [RolesController::class, 'update']);
+    Route::delete('/{role}', [RolesController::class, 'destroy']);
+});
+
+
+});
+
+//PUBLICO
+
+
+
 
 // Rutas de encargados
 Route::prefix('encargados')->group(function () {
@@ -41,14 +76,6 @@ Route::prefix('encargados')->group(function () {
     Route::get('/{encargado}/show', [EncargadoController::class, 'show']);
     Route::put('/{encargado}/update', [EncargadoController::class, 'update']);
     Route::delete('/{encargado}', [EncargadoController::class, 'destroy']);
-});
-// Rutas de Clientes
-Route::prefix('clientes')->group(function () {
-    Route::get('/', [ClientesController::class, 'index']);
-    Route::post('/store', [ClientesController::class, 'store']);
-    Route::get('/{cliente}/show', [ClientesController::class, 'show']);
-    Route::put('/{cliente}/update', [ClientesController::class, 'update']);
-    Route::delete('/{cliente}', [ClientesController::class, 'destroy']);
 });
 
 // Rutas de Servicios
@@ -66,6 +93,7 @@ Route::prefix('servicios')->group(function () {
 
 
 
+
 // Rutas públicas
 Route::get('/', function () {
 
@@ -73,6 +101,7 @@ Route::get('/', function () {
 });
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
+
 
 
 // Esta ruta puede requerir autenticación, dependiendo de tus necesidades
